fix bugs on mobile devices

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -20,7 +20,7 @@
     margin-bottom: 2.5rem;
     & h1 {
       color: white;
-      font-size: 2rem;
+      font-size: 3rem;
       font-family: "lato";
     }
   }
