--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -5,19 +5,16 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  font-family: "Anton", sans-serif;
+  font-family: "lato", sans-serif;
   justify-content: center;
   align-items: center;
   &__content {
-    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
   }
   &__header {
-    position: relative;
-    top: 25%;
+    padding-bottom: 2rem;
     & > h2 {
       font-size: 3rem;
       color: white;
